Add camera feature

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,8 @@
 
 CC = g++
 CFLAGS = -lSDL2 -lfreeimage
-DEPS = camera.h materials.h rays.h intersections.h light_source.h primitive_objects.h scene.h process.h libraries.h FreeImage/FreeImage.h
-OBJ = camera.o materials.o rays.o intersections.o light_source.o primitive_objects.o scene.o process.o libraries.o main.o
+DEPS = libraries.h camera.h materials.h rays.h intersections.h light_source.h primitive_objects.h scene.h process.h
+OBJ = libraries.o camera.o materials.o rays.o intersections.o light_source.o primitive_objects.o scene.o process.o main.o
 
 %.o : %.c $(DEPS)
 		$(CC) -c -o $@ $< $(CFLAGS)
